--- a/BlazorApp1/Pages/NodeInformation.razor
+++ b/BlazorApp1/Pages/NodeInformation.razor
@@ -18,6 +18,8 @@
 
     public void Back()
     {
-        UriHelper.NavigateTo($"skilltree/{fileName}");
+        //UriHelper.NavigateTo($"skilltree/{fileName}");
+
+        UriHelper.NavigateTo($"skilltreeV2/{fileName}");
     }
 }
