--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -45,7 +45,6 @@
     }
 }
 
-
 @code {
 
     bool NodeSec, ConnectionSec, Connectors;
@@ -53,7 +52,7 @@
     private List<Branch> Nodes;
     private List<Connectors> Connections;
 
-    private string FolderPath = Directory.GetCurrentDirectory() + @"\SavedSkillTrees\";
+    private string FolderPath = Directory.GetCurrentDirectory() + @"\SavedSkillTrees\V1\";
     private string FileName;
     private string[] Files;
     private string[] info;
