--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -18,14 +18,14 @@
         </div>
         @if (User.user.Type == "Teacher")
         {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="makeskilltree">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="makeskilltreeV2">
                 <span class="oi oi-command" aria-hidden="true"></span> Make a Skill Tree
             </NavLink>
         </div>
         }
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="skilltree">
+            <NavLink class="nav-link" href="skilltreeV2">
                 <span class="oi oi-people" aria-hidden="true"></span> Skill Tree
             </NavLink>
         </div>
