Updated Login Page (work in progress)

--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -19,6 +19,26 @@
 }
 </script>
 
+<link rel="stylesheet" href="styles.css" />
+
+
+<!--
+<div class="container">
+<form action="">
+    <div class="form-group">
+        <label for="">Username</label>
+        <input type="text" class="form-control" required />
+    </div>
+    <div class="form-group">
+        <label for="">Password</label>
+        <input type="password" class="form-control" required />
+    </div>
+    <input type="submit" class="btn" value="Login" />
+</form>
+</div>
+ -->
+
+
 @if (hasAccount)
 {
     <h1> RPG Classroom Login</h1>
@@ -45,6 +65,7 @@
 else
 {
     <EditForm Model="@user">
+        <div class="container">
         <p>Please enter a username</p>
         <label for="UserName"> User Name</label>
         <InputText id="UserName" @bind-Value="newName" placeholder="username" /> <br />
@@ -77,6 +98,8 @@ else
             <InputText id="AccessCode" @bind-Value="accessCode" placeholder="Ex: 12345" /> <br />
         </div>
 
+        </div>
+
       
     
     <br />
@@ -88,7 +111,7 @@ else
 
     <button class="btn btn-primary" @onclick="Back"> Back </button>
     </EditForm>
-
+    
     
 }
 @code {
