--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -56,6 +56,7 @@
     DiagramObjectCollection<Connector> connectors;
 
     int NodeIndex = 1;
+    int ConnectorIndex = 1;
     Branch SelectedBranch;
     List<Branch> Branchs = new List<Branch>();
 
@@ -130,21 +131,15 @@
     {
         if (args.Action.ToString().Equals("Remove") && Branchs.Any())
         {
-            // node has been added
-            bool del = true;
             foreach(Branch b in Branchs)
             {
                 foreach(Node n in nodes)
                 {
                     if(n.ID == b.ID)
                     {
-                        del = false;
-                        break;
+                        Branchs.Remove(b);
+                        return;
                     }
-                }
-                if(del)
-                {
-                    Branchs.Remove(b);
                 }
             }
         }
@@ -195,13 +190,15 @@
         Connector Connector = new Connector()
             // Enable the segment editing.
             {
-                ID = "Connector2",
+                ID = "Connector" + ConnectorIndex,
                 Constraints = ConnectorConstraints.Default | ConnectorConstraints.DragSegmentThumb,
                 Type = ConnectorSegmentType.Orthogonal,
                 SourcePoint = new DiagramPoint { X = 400, Y = 100 },
                 TargetPoint = new DiagramPoint { X = 500, Y = 200 }
             };
         connectors.Add(Connector);
+
+        ConnectorIndex++;
     }
 
     private void AddNode()
@@ -257,7 +254,7 @@
             //Set the style for the port.
             Style = new ShapeStyle()
             {
-                Fill = "gray",
+                    Fill = "green",
                 StrokeColor = "black"
             },
             Width = 12,
@@ -265,7 +262,9 @@
             // Sets the shape of the port as Square.
             Shape = PortShapes.Square,
             // Enable draw operation for Port
-            Constraints = PortConstraints.Default | PortConstraints.Draw
+            Constraints = PortConstraints.Default | PortConstraints.Draw,
+
+            Visibility = PortVisibility.Visible,
         };
         PointPort port2 = new PointPort()
         {
@@ -275,7 +274,7 @@
             //Set the style for the port.
             Style = new ShapeStyle()
             {
-                Fill = "gray",
+                    Fill = "green",
                 StrokeColor = "black"
             },
             Width = 12,
@@ -283,7 +282,9 @@
             // Sets the shape of the port as Square.
             Shape = PortShapes.Square,
             // Enable draw operation for Port
-            Constraints = PortConstraints.Default | PortConstraints.Draw
+            Constraints = PortConstraints.Default | PortConstraints.Draw,
+
+            Visibility = PortVisibility.Visible,
         };
         PointPort port3 = new PointPort()
         {
@@ -293,7 +294,7 @@
             //Set the style for the port.
             Style = new ShapeStyle()
             {
-                Fill = "gray",
+                Fill = "green",
                 StrokeColor = "black"
             },
             Width = 12,
@@ -301,7 +302,9 @@
             // Sets the shape of the port as Square.
             Shape = PortShapes.Square,
             // Enable draw operation for Port
-            Constraints = PortConstraints.Default | PortConstraints.Draw
+            Constraints = PortConstraints.Default | PortConstraints.Draw,
+
+            Visibility = PortVisibility.Visible,
         };
         PointPort port4 = new PointPort()
         {
@@ -311,7 +314,7 @@
             //Set the style for the port.
             Style = new ShapeStyle()
             {
-                Fill = "gray",
+                    Fill = "green",
                 StrokeColor = "black"
             },
             Width = 12,
@@ -319,7 +322,9 @@
             // Sets the shape of the port as Square.
             Shape = PortShapes.Square,
             // Enable draw operation for Port
-            Constraints = PortConstraints.Default | PortConstraints.Draw
+            Constraints = PortConstraints.Default | PortConstraints.Draw,
+
+            Visibility = PortVisibility.Visible,
         };
 
         // Add multiple ports in the port collection.
@@ -340,5 +345,6 @@
     {
         Branchs.Clear();
         diagram.Clear();
+        NodeIndex = 1;
     }
 }
