Connector changes color when selected to be invisible

--- a/BlazorApp1/Pages/MakeSkillTreeV2.razor
+++ b/BlazorApp1/Pages/MakeSkillTreeV2.razor
@@ -506,6 +506,21 @@
             if (c.ID == SelectedConnector.ID)
             {
                 c.Visible = !c.Visible;
+
+                foreach (Connector connect in connectors)
+                {
+                    if(c.ID == connect.ID)
+                    {
+                        if(c.Visible)
+                        {
+                            connect.Style.StrokeColor = "black";
+                        }
+                        else
+                        {
+                            connect.Style.StrokeColor = "yellow";
+                        }
+                    }
+                }
             }
         }
     }
