--- a/BlazorApp1/Pages/SkillTreeV2.razor
+++ b/BlazorApp1/Pages/SkillTreeV2.razor
@@ -137,7 +137,7 @@
             else if (c)
             {
                 int opacity = 0;
-                if (info[7] == "False")
+                if (info[7] == "True")
                 {
                     opacity = 100;
                 }
