--- a/BlazorApp1/Pages/Popup.razor
+++ b/BlazorApp1/Pages/Popup.razor
@@ -1,8 +1,7 @@
 ﻿@{
     var showClass = IsVisible ? "d-block" : "d-none";
 }
-
-<div class="toast-container p-3 @showClass" data-bs-autohide="true" data-bs-delay="5000">
+<div style="position: absolute; top: 10%; left: 50%; margin: -50px 0 0 -50px;" class="toast-container p-3 @showClass" data-bs-autohide="true" data-bs-delay="5000">
     <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <strong class="me-auto">@HeaderText</strong>
@@ -36,7 +35,7 @@
         StateHasChanged();
     }
 
-    private void Close()
+    public void Close()
     {
         HeaderText = string.Empty;
         BodyText = string.Empty;
