--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -21,8 +21,8 @@
     }
     </select>
 }
-
-<button class="btn btn-primary" @onclick="LoadTree">Load Tree</button>
+ 
+<input Type="button" value="Load Tree" @onclick="LoadTree" />
 
 @if (Connections != null)
 {
