--- a/BlazorApp1/Pages/SkillTreeV2.razor
+++ b/BlazorApp1/Pages/SkillTreeV2.razor
@@ -20,7 +20,7 @@
     </select>
 }
 
-<input Type="button" value="Load Tree" @onclick="LoadTree" />
+<input Type="button" value="Load Tree" @onclick="LoadTree" style="margin-left: 10px;" />
 
 <SfDiagramComponent @ref="diagram" Nodes="@nodes"
                     Height="800px"
