added info to Node "branch" information page

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -9,5 +9,8 @@
 Welcome to your RPG classroom.
 
 @code {
-
+    protected override void OnInitialized()
+    {
+        Assignment.getAssignments();
+    }
 }
