--- a/BlazorApp1/Pages/TakeAssignment.razor
+++ b/BlazorApp1/Pages/TakeAssignment.razor
@@ -62,119 +62,7 @@ else{
 
     protected override async Task OnInitializedAsync()
     {
-        //user.buildUser();
-
-        Questions = new List<AssignmentQuestion>();
-        QuestionSec = false;
-        TypeSec = false;
-        OptionSec = false;
-        AnswerSec = false;
-        points = false;
-        Distribution = false;
-
-
-        // Read a text file line by line.
-        string[] lines = File.ReadAllLines(FolderPath + name);
-
-        foreach (string line in lines)
-        {
-            if (line.Trim() == "questions|")
-            {
-                QuestionSec = true;
-                TypeSec = false;
-                OptionSec = false;
-                AnswerSec = false;
-                points = false;
-                Distribution = false;
-                continue;
-            }
-            else if (line.Trim() == "type|")
-            {
-                QuestionSec = false;
-                TypeSec = true;
-                OptionSec = false;
-                AnswerSec = false;
-                points = false;
-                Distribution = false;
-                continue;
-            }
-            else if (line.Trim() == "options|")
-            {
-                QuestionSec = false;
-                TypeSec = false;
-                OptionSec = true;
-                AnswerSec = false;
-                points = false;
-                Distribution = false;
-                continue;
-            }
-            else if (line.Trim() == "answer|")
-            {
-                QuestionSec = false;
-                TypeSec = false;
-                OptionSec = false;
-                AnswerSec = true;
-                points = false;
-                Distribution = false;
-                continue;
-            }
-            else if (line.Trim() == "Points|")
-            {
-                QuestionSec = false;
-                TypeSec = false;
-                OptionSec = false;
-                AnswerSec = false;
-                points = true;
-                Distribution = false;
-                continue;
-            }
-            else if (line.Trim() == "DISTRIBUTION|")
-            {
-                QuestionSec = false;
-                TypeSec = false;
-                OptionSec = false;
-                AnswerSec = false;
-                points = false;
-                Distribution = true;
-                continue;
-            }
-            else if (line.Trim() == "end|")
-            {
-                QuestionSec = false;
-                TypeSec = false;
-                OptionSec = false;
-                AnswerSec = false;
-                points = false;
-                Distribution = false;
-                Questions.Add(question);
-                continue;
-            }
-
-            if (QuestionSec)
-            {
-                question = new AssignmentQuestion(line);
-            }
-            else if (TypeSec)
-            {
-                question.type = line;
-            }
-            else if (OptionSec)
-            {
-                question.options = line.Split(';');
-            }
-            else if (AnswerSec)
-            {
-                question.answers = line.Split(';');
-            }
-            else if (points)
-            {
-                question.points = Int32.Parse(line);
-            }
-            else if (Distribution)
-            {
-                question.skillValueDistribution.Add(line.Split(";"));
-            }
-        }
+        Questions = AssignmentQuestion.loadQuestions(name);
     }
 
     public async void Submit()
