--- a/BlazorApp1/wwwroot/css/style.css
+++ b/BlazorApp1/wwwroot/css/style.css
@@ -5,14 +5,14 @@
 }
 body{
 	min-height: 100vh;
-	background: #ffffff;
+	background: white;
 	display: flex;
 	font-family: sans-serif;
 }
 .container{
 	margin: auto;
 	width: 500px;
-	max-width: 90%
+	max-width: 90%;
 }
 .container form{
 	width: 100%;
@@ -20,12 +20,12 @@ body{
 	padding: 20px;
 	background: white;
 	border-radius: 4px;
-	box-shadow: 0 8px 16px rgba(0,0,0,.3);
+	box-shadow: 0 8px 16px rgba(0,0,0);
 }
 .container form h1{
 	text-align: center;
 	margin-bottom: 24px;
-	color: #000000
+	color: black;
 }
 .container form .form-control{
 	width: 100%;
@@ -43,7 +43,7 @@ body{
 	height: 34px;
 	border: none;
 	outline: none;
-	background: #4cff00;
+	background: green;
 	cursor: pointer;
 	font-size: 16px;
 	text-transform: uppercase;
