--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -19,32 +19,9 @@
 }
 </script>
 
-<!--
-<body>
-    <div class="container">
-    <form action="">
-        <h1>RPG Classroom Login</h1>
-        <div class="form-group">
-                @if (!correctAccount)
-                {
-                    <p>Your username is not correct</p>
-                }
-            <label for="">Username</label>
-            <input type="text" @bind="name" class="form-control" placeholder="Username" required />
-        </div>
-        <div class="form-group">
-                @if (!correctPassword)
-                {
-                    <p>Your password is not correct</p>
-                }
-            <label for="">Password</label>
-            <input type="password" @bind="password" class="form-control" placeholder="Password" />
-        </div>
-        <input type="submit" @onclick="Submit" class="btn" value="Login" />
-    </form>
-    </div>
-</body>
--->
+
+
+
 
  
 
@@ -76,6 +53,34 @@
     <button class="btn btn-primary" @onclick="newAccount"> Make a Account </button>  <br />
 
     <button class="btn btn-primary" @onclick="Submit"> Submit </button>
+
+    <!--
+    <body>
+        <div class="container">
+            <form action="">
+                <h1>RPG Classroom Login</h1>
+                <div class="form-group">
+                    @if (!correctAccount)
+                    {
+                        <p>Your username is not correct</p>
+                    }
+                    <label for="">Username</label>
+                    <input type="text" @bind="name" class="form-control" placeholder="Username" required />
+                </div>
+                <div class="form-group">
+                    @if (!correctPassword)
+                    {
+                        <p>Your password is not correct</p>
+                    }
+                    <label for="">Password</label>
+                    <input type="password" @bind="password" class="form-control" placeholder="Password" />
+                </div>
+                <input type="submit" @onclick="Submit" class="btn" value="Login" /> <br /><br />
+                <input type="submit" @onclick="newAccount" class="btn" value="New User" />
+            </form>
+        </div>
+    </body>
+    -->
 }
 else
 {
